--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
   <!-- Tailwind CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <style>
-    /* Additional custom styles */
+    
     .container {
       max-width: 800px;
+    }
+    
+    @media (max-width: 768px) {
+      .container {
+        max-width: 100%;
+        padding: 0 20px;
+      }
     }
   </style>
 </head>
