--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     
     .container {
       max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 20px;
     }
+
     
-    @media (max-width: 768px) {
+    @media (max-width: 576px) {
       .container {
         max-width: 100%;
-        padding: 0 20px;
+        padding: 0 10px;
       }
     }
   </style>
