--- a/index.html
+++ b/index.html
@@ -16,12 +16,22 @@
     }
 
     
-    @media (max-width: 576px) {
-      .container {
-        max-width: 100%;
-        padding: 0 10px;
-      }
-    }
+    
+@media (max-width: 576px) {
+  .container {
+    max-width: 100%;
+    padding: 0 10px;
+  }
+
+  textarea {
+    width: 100%;
+  }
+
+  button {
+    width: 100%;
+  }
+}
+
   </style>
 </head>
 <body>
